# Software-Engineering-Capstone-Project

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yaml
src/app/: cli.py  database.py  main.py  utils.py
tests/: conftest.py  test_cli.py  test_database.py  test_utils.py
