[tool.poetry]
name = "password-manager"
version = "0.1.0"
description = ""
authors = ["markus <datamastery87@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.7.0"
sqlalchemy = "^2.0.10"
cryptography = "^40.0.2"
python-dotenv = "^1.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
password-manager = "password_manager.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
